# Gatekeeper

./: .gitignore  Makefile  RAILWAY_DEPLOYMENT.md  README.md
.github/workflows/: ci.yml
gatekeeper-backend/: Dockerfile  pyproject.toml  start.sh
gatekeeper-backend/app/: __init__.py  main.py  mtls.py
gatekeeper-backend/tests/: test_main.py
gatekeeper-control-plane/: Dockerfile  alembic.ini  pyproject.toml  start.sh
gatekeeper-control-plane/alembic/: env.py  script.py.mako
gatekeeper-control-plane/alembic/versions/: 001_initial_schema.py  002_add_routepolicy.py  (+1 more)
gatekeeper-control-plane/app/: __init__.py  config.py  database.py  main.py  models.py
gatekeeper-control-plane/tests/: test_main.py
gatekeeper-dashboard/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
gatekeeper-dashboard/src/: App.tsx  OverviewView.tsx  PoliciesView.tsx  PostureView.tsx  SessionsView.tsx  TrafficView.tsx  UsersView.tsx  api.ts  index.css
gatekeeper-proxy/: Dockerfile  pyproject.toml
gatekeeper-proxy/app/: __init__.py  audit.py  config.py  main.py  mtls.py  proxy.py
gatekeeper-proxy/app/auth/: __init__.py  keys.py  oauth.py  rbac.py  sessions.py  tokens.py
gatekeeper-proxy/app/middleware/: __init__.py  auth.py  correlation.py  csrf.py  logging.py  metrics.py  posture.py  ratelimit.py  security_headers.py
gatekeeper-proxy/tests/: test_auth.py  test_proxy.py  test_rbac.py
infra/: .env.example  docker-compose.prod.yml  docker-compose.yml  generate-certs.sh  generate_mtls_certs.sh  nginx.conf  seed-dashboard.sh  smoke-tests.sh
(+14 files in other folders)
